[project]
name = "zhdel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catbot",
    "mwclient>=0.11.0",
    "requests>=2.34.2",
    "requests-sse>=0.5.3",
]

[tool.uv.sources]
catbot = { git = "https://github.com/The-Earth/catbot.git" }
